# Test_Task_DRF

./: README.md  pyproject.toml
config/: settings.py
